--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="mainStyles.css">
     <link rel="stylesheet" href="homeStyles.css">
     <link rel="stylesheet" href="bigFooter.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <header class="header">
@@ -34,7 +37,7 @@
         <img class="hero-img" src="assets/hero-accueil.jpg">
     </div>
     <div class="main-content">
-        <h2>qui sommes-nous ?</h2>
+        <h2>Qui sommes-nous ?</h2>
         <div class="separator"></div>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa ratione consectetur nisi magni
             suscipit, distinctio sequi cupiditate impedit enim aut?</p>
