--- a/valeurs.html
+++ b/valeurs.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainStyles.css">
     <link rel="stylesheet" href="valeursStyles.css">
-    <link rel="stylesheet" href="bigFooter.css">
+    <link rel="stylesheet" href="smallFooter.css">
     <title>Document</title>
 </head>
 
@@ -30,7 +30,7 @@
 <body>
 
     <div class="hero">
-        
+
         <button class="hero-reserver">Réservation</button>
         <img class="hero-img" src="assets/valeursHero.jpg">
     </div>
@@ -39,42 +39,57 @@
 
     <div class="main-content">
         <h2>NOS VALEURS</h2>
+
         <div class="separator"></div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa ratione consectetur nisi magni
-            suscipit, distinctio sequi cupiditate impedit enim aut?</p>
-        <div class="main-img"><img src="assets/valeursIllu.webp"></div>
+
+        <p>Nos valeurs sont simples : vous donner le meilleur de la terre en lien avec les producteurs locaux, dans le
+            respect du vivant.
+            Et à pas trop cher parce qu'on n'est pas non plus des oufs, c'est la crise.</p>
+        <div class="boiteImageMain">
+            <div class="boiteImageTop">
+                <div class="valeurs-img"><img src="assets/valeur01.jpg"></div>
+                <div class="valeurs-img"><img src="assets/valeur02.jpg"></div>
+            </div>
+            <div class="valeurs-img"><img src="assets/valeur03.jpg"></div>
+
+        </div>
 
     </div>
+
+
+
+
+
     <footer>
         <div class="main-footer">
+
             <div class="footer-content">
-                <p>TELEPHONE : 0134567898 <br>
-                    EMAIL : contact@labonnecarotte.com <br>
-                    ADRESSE : 3 rue Baron 44000 Nantes</p>
+                <div class="functions-icon">
+                    <img id="mail" src="assets/mail.png">
+                    <img id="phone" src="assets/phone2.png">
+                    <img id="map" src="assets/map.png">
+                </div>
+
                 <div class="social-icon">
-                    <img src="assets/insta.png">
-                    <img src="assets/facebook.png">
-                    <img src="assets/twitter.png">
+                    <img id= "insta" src="assets/insta.png">
+                    <img id="facebook" src="assets/facebook.png">
+                    <img id="twitter" src="assets/twitter.png">
                 </div>
             </div>
 
-            <div class="footer-map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10841.097528561053!2d-1.55627423195216!3d47.211213323200745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4805eeb052a02407%3A0x188bca8c7735488f!2s3%20Rue%20Baron%2C%2044000%20Nantes!5e0!3m2!1sfr!2sfr!4v1678633949444!5m2!1sfr!2sfr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+
+
         </div>
-        <ul>
-            <li>Accueil</li>
-            <li>La Carte</li>
-            <li>Nos valeurs</li>
-            <li>Nous contacter</li>
-            <li>Réservations</li>
-        </ul>
+
         <p>Mentions légales - ©Lafièrecarotte tous droits réservés
         </p>
     </footer>
+
+
+
+
+
+
 
     <script src="script.js"></script>
 
