--- a/valeurs.html
+++ b/valeurs.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="mainStyles.css">
     <link rel="stylesheet" href="valeursStyles.css">
     <link rel="stylesheet" href="smallFooter.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -45,9 +46,13 @@
         <p>Nos valeurs sont simples : vous donner le meilleur de la terre en lien avec les producteurs locaux, dans le
             respect du vivant.
             Et à pas trop cher parce qu'on n'est pas non plus des oufs, c'est la crise.</p>
+
+
+
+
         <div class="boiteImageMain">
             <div class="boiteImageTop">
-                <div class="valeurs-img"><img src="assets/valeur01.jpg"></div>
+                <div class="valeurs-img"><img src="assets/legumes.png"></div>
                 <div class="valeurs-img"><img src="assets/valeur02.jpg"></div>
             </div>
             <div class="valeurs-img"><img src="assets/valeur03.jpg"></div>
@@ -65,15 +70,15 @@
 
             <div class="footer-content">
                 <div class="functions-icon">
-                    <img id="mail" src="assets/mail.png">
-                    <img id="phone" src="assets/phone2.png">
-                    <img id="map" src="assets/map.png">
+                    <a href="mailto: abc@example.com" target="_blank"> <img id="mail" src="assets/mail.png"></a>
+                    <a href=" +330606060606" target="_blank"> <img id="phone" src="assets/phone2.png"> </a>
+                    <a href="https://goo.gl/maps/PzpQMd1XEAXccWzd6" target="_blank"> <img id="map" src="assets/map.png"></a>
                 </div>
 
                 <div class="social-icon">
-                    <img id= "insta" src="assets/insta.png">
-                    <img id="facebook" src="assets/facebook.png">
-                    <img id="twitter" src="assets/twitter.png">
+                    <a href="https://www.instagram.com" target="_blank"><img id="insta" src="assets/insta.png"></a>
+                    <a href="https://www.facebook.com" target="_blank"><img id="facebook" src="assets/facebook.png"></a>
+                    <a href="https://www.twitter.com" target="_blank"><img id="twitter" src="assets/twitter.png"></a>
                 </div>
             </div>
 
