--- a/carte.html
+++ b/carte.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="mainStyles.css">
     <link rel="stylesheet" href="homeStyles.css">
     <link rel="stylesheet" href="bigFooter.css">
-    <link rel="stylesheet" href="carte.css">
+    <link rel="stylesheet" href="carteStyles.css">
 
     <title>Document</title>
 </head>
