--- a/valeurs.html
+++ b/valeurs.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="valeursStyles.css">
     <link rel="stylesheet" href="smallFooter.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>La fière carotte - Vegan of the Wild !</title>
 </head>
 
 <header class="header">
     <h1 class="header-title">La fière carotte</h1>
     <div id="menu-button" class="close"></div>
-    <img class="logo" src="assets/main-logo.png">
+    <a href="./index.html"><img class="logo" src="assets/main-logo.png"></a>
 </header>
 <nav id="menu">
     <ul>
