nettoyage de code et de fichier du vendredi

--- a/valeurs.html
+++ b/valeurs.html
@@ -31,15 +31,13 @@
 <body>
 
     <div class="hero">
-
         <button class="hero-reserver">Réservation</button>
         <img class="hero-img" src="assets/valeursHero.jpg">
     </div>
 
-
-
     <div class="main-content">
-        <h2>NOS VALEURS</h2>
+
+        <h2>Nos valeurs...</h2>
 
         <div class="separator"></div>
 
@@ -47,32 +45,24 @@
             respect du vivant.
             Et à pas trop cher parce qu'on n'est pas non plus des oufs, c'est la crise.</p>
 
-
-
-
         <div class="boiteImageMain">
             <div class="boiteImageTop">
                 <div class="valeurs-img"><img src="assets/legumes.png"></div>
                 <div class="valeurs-img"><img src="assets/valeur02.jpg"></div>
             </div>
             <div class="valeurs-img"><img src="assets/valeur03.jpg"></div>
-
         </div>
-
     </div>
-
-
-
-
 
     <footer>
         <div class="main-footer">
-
             <div class="footer-content">
+
                 <div class="functions-icon">
                     <a href="mailto: abc@example.com" target="_blank"> <img id="mail" src="assets/mail.png"></a>
                     <a href=" +330606060606" target="_blank"> <img id="phone" src="assets/phone2.png"> </a>
-                    <a href="https://goo.gl/maps/PzpQMd1XEAXccWzd6" target="_blank"> <img id="map" src="assets/map.png"></a>
+                    <a href="https://goo.gl/maps/PzpQMd1XEAXccWzd6" target="_blank"> <img id="map"
+                            src="assets/map.png"></a>
                 </div>
 
                 <div class="social-icon">
@@ -81,23 +71,12 @@
                     <a href="https://www.twitter.com" target="_blank"><img id="twitter" src="assets/twitter.png"></a>
                 </div>
             </div>
-
-
-
         </div>
-
-        <p>Mentions légales - ©Lafièrecarotte tous droits réservés
-        </p>
+        <p>Mentions légales - ©Lafièrecarotte tous droits réservés</p>
     </footer>
 
-
-
-
-
-
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
 
 </body>
-
 </html>
