finalisation du menu & header, ajouts des liens

--- a/nouscontacter.html
+++ b/nouscontacter.html
@@ -24,7 +24,10 @@
         <li>Nos valeurs</li>
         <li>Nous contacter</li>
         <li>
-            <button class="menu-reserver">Réservation</button>
+            <button id="animatedButton" class="menu-reserver"><a href="./Reservation.html">
+                    <div id="messenger"></div>
+                </a>
+            </button>
         </li>
     </ul>
 </nav>
@@ -63,33 +66,34 @@
             <input type="submit" value="Envoyer" id="form_button" />
         </div>
     </form>
-    
-    <script src="script.js"></script>
-</body>
-<footer>
-    <div class="main-footer">
+    <footer>
+        <div class="main-footer">
 
-        <div class="footer-content">
-            <div class="functions-icon">
-                <img id="mail" src="assets/mail.png">
-                <img id="phone" src="assets/phone2.png">
-                <img id="map" src="assets/map.png">
+            <div class="footer-content">
+                <div class="functions-icon">
+                    <img id="mail" src="assets/mail.png">
+                    <img id="phone" src="assets/phone2.png">
+                    <img id="map" src="assets/map.png">
+                </div>
+
+                <div class="social-icon">
+                    <img id="insta" src="assets/insta.png">
+                    <img id="facebook" src="assets/facebook.png">
+                    <img id="twitter" src="assets/twitter.png">
+                </div>
             </div>
 
-            <div class="social-icon">
-                <img id= "insta" src="assets/insta.png">
-                <img id="facebook" src="assets/facebook.png">
-                <img id="twitter" src="assets/twitter.png">
-            </div>
+
+
         </div>
 
+        <p>Mentions légales - ©Lafièrecarotte tous droits réservés
+        </p>
+    </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="script.js"></script>
+</body>
 
-
-    </div>
-
-    <p>Mentions légales - ©Lafièrecarotte tous droits réservés
-    </p>
-</footer>
 
 
 </html>
