--- a/nouscontacter.html
+++ b/nouscontacter.html
@@ -66,7 +66,6 @@
         </div>
     </form>
 
-    <script src="script.js"></script>
     <footer>
         <div class="main-footer">
 
@@ -88,9 +87,8 @@
         <p>Mentions légales - ©Lafièrecarotte tous droits réservés</p>
     </footer>
     <script src="script.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="scriptnouscontacter.js"></script>
- 
-
 </body>
 
 </html>
