--- a/valeurs.html
+++ b/valeurs.html
@@ -15,15 +15,20 @@
 <header class="header">
     <h1 class="header-title">La fière carotte</h1>
     <div id="menu-button" class="close"></div>
-    <a href="./index.html"><img class="logo" src="assets/main-logo.png"></a>
+    <a href="./index.html"> <img class="logo" src="assets/main-logo.png"></a>
 </header>
 <nav id="menu">
     <ul>
-        <li>Menu du restaurant</li>
-        <li>Nos valeurs</li>
-        <li>Nous contacter</li>
+        <li><a href="./carte.html">Menu du restaurant</a></li>
+        <li><a href="./valeurs.html">Nos valeurs</a></li>
+        <li><a href="./nouscontacter.html">Nous contacter</a></li>
+
+
         <li>
-            <button class="menu-reserver">Réservation</button>
+            <button id="animatedButton" class="menu-reserver"><a href="./Reservation.html">
+                    <div id="messenger"></div>
+                </a>
+            </button>
         </li>
     </ul>
 </nav>
@@ -31,10 +36,10 @@
 <body>
 
     <div class="hero">
-        <button class="hero-reserver">Réservation</button>
+        <h2>Bienvenue à la fière carotte</h2>
+        <a class="hero-reserver" href="./Reservation.html">Réservation</a>
         <img class="hero-img" src="assets/valeursHero.jpg">
     </div>
-
     <div class="main-content">
 
         <h2>Nos valeurs...</h2>
