3eme jours 2eme commit

--- a/carte.html
+++ b/carte.html
@@ -34,9 +34,9 @@
 </nav>
 <body>
     <div class="hero">
-        <h2>Bienvenue à la fière carotte</h2>
+        <h2>Notre carte</h2>
         <a class="hero-reserver" href="./Reservation.html">Réservation</a>
-        <img class="hero-img" src="assets/hero-accueil.jpg">
+        <img class="hero-img" src="./assets/hero-accueil.jpg">
     </div>
     <div class="carte">
         <div class="navMenu1">
