Finalisation des derniers éléments avant la prez

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             produits frais, locaux. Venez découvrir notre menu équilibré et
             et respectueux de l'environnement dans une ambiance accueillante et éco-responsable.</p>
         <div class="main-img"><img src="assets/main-accueil.jpg"></div>
-        <a class="main-button" href="./Reservation.html"> notre menu</a>
+        <a class="main-button" href="./carte.html"> notre menu</a>
         <div class="separator"></div>
         <h3>Du lundi au vendredi</h3>
         <p class="ouverture">Midi : 12h00 - 14h30</p>
         <p class="ouverture">Soir : 19h00 - 22h30</p>
     </div>
-    
+
     <footer>
         <div class="main-footer">
             <div class="footer-content">
