--- a/carte.html
+++ b/carte.html
@@ -32,11 +32,12 @@
         </li>
     </ul>
 </nav>
+
 <body>
     <div class="hero">
-        <h2>Notre carte</h2>
+        <h2>Notre menus & nos plats</h2>
         <a class="hero-reserver" href="./Reservation.html">Réservation</a>
-        <img class="hero-img" src="./assets/hero-accueil.jpg">
+        <img class="hero-img" src="./assets/img_menu.png.jpg">
     </div>
     <div class="carte">
         <div class="navMenu1">
@@ -55,13 +56,15 @@
 
             <H4>Menu du jour à 18€</H4>
 
-            <p id="p1"><U> Entrée</u>  <br>
-                Salade de chou frisé avec avocat, tomates cerises, noix de cajou grillées et vinaigrette à base de moutarde et de sirop d'érable.
+            <p id="p1"><U> Entrée</u> <br>
+                Salade de chou frisé avec avocat, tomates cerises, noix de cajou grillées et vinaigrette à base de
+                moutarde et de sirop d'érable.
                 <br>
                 <br>
 
                 <U>Plat</U> <br>
-                Bowl de quinoa, pois chiches rôtis, patates douces rôties, poivrons grillés, épinards frais et une vinaigrette à base de tahini et de jus de citron.                <br>
+                Bowl de quinoa, pois chiches rôtis, patates douces rôties, poivrons grillés, épinards frais et une
+                vinaigrette à base de tahini et de jus de citron. <br>
                 <br>
 
 
@@ -71,49 +74,61 @@
             </p>
         </div>
         <div class="Carte Entrees" id="mEntrees">
-            <p id="p1"><U>Bruschetta aux tomates et au basilic</U>  11€<br><br>
-                cette entrée classique italienne consiste en des tranches de pain grillé garnies de tomates fraîches, d'ail, d'huile d'olive, de basilic et de sel.
+            <p id="p1"><U>Bruschetta aux tomates et au basilic</U> 11€<br><br>
+                cette entrée classique italienne consiste en des tranches de pain grillé garnies de tomates fraîches,
+                d'ail, d'huile d'olive, de basilic et de sel.
 
                 <br>
                 <br>
 
                 <U>Rouleaux de printemps aux légumes</U> 11€<br><br>
-                ces rouleaux de riz de printemps frais sont remplis de légumes croquants tels que des carottes, des poivrons, du chou, des germes de soja et des feuilles de menthe, et servis avec une sauce à la cacahuète.
+                ces rouleaux de riz de printemps frais sont remplis de légumes croquants tels que des carottes, des
+                poivrons, du chou, des germes de soja et des feuilles de menthe, et servis avec une sauce à la
+                cacahuète.
                 <br>
                 <br>
 
 
                 <U>Salade de quinoa et de légumes rôtis</U> 11€<br><br>
-                cette salade consiste en du quinoa cuit, mélangé avec des légumes tels que des courgettes, des poivrons, des oignons rouges, des aubergines rôties et des feuilles de roquette. Elle est garnie d'une vinaigrette légère à l'huile d'olive et au jus de citron.
+                cette salade consiste en du quinoa cuit, mélangé avec des légumes tels que des courgettes, des poivrons,
+                des oignons rouges, des aubergines rôties et des feuilles de roquette. Elle est garnie d'une vinaigrette
+                légère à l'huile d'olive et au jus de citron.
             </p>
         </div>
         <div class="Carte Plats" id="mPlats">
             <p id="p1"><U>Chili végétalien</U> - 11€<br>
-                ce plat est préparé avec des légumes, des haricots rouges, des épices et des tomates en conserve. Il est servi chaud avec du riz, des avocats tranchés et des feuilles de coriandre fraîches.
+                ce plat est préparé avec des légumes, des haricots rouges, des épices et des tomates en conserve. Il est
+                servi chaud avec du riz, des avocats tranchés et des feuilles de coriandre fraîches.
                 <br>
                 <br>
 
                 <U>Curry de pois chiches et épinards</U> - 11€<br><br>
-                ce plat indien est préparé avec des pois chiches, des épinards frais, des tomates, des épices et du lait de coco. Il est servi avec du riz basmati et du naan végétalien.
+                ce plat indien est préparé avec des pois chiches, des épinards frais, des tomates, des épices et du lait
+                de coco. Il est servi avec du riz basmati et du naan végétalien.
                 <br>
                 <br>
                 <U>Bowl de quinoa, légumes et avocat</U>- 11€<br><br>
-                ce plat consiste en une base de quinoa cuit, mélangée avec des légumes rôtis tels que des patates douces, des poivrons et des champignons. Il est garni d'avocat tranché, de graines de sésame grillées et d'une vinaigrette à base de tahini et de citron.
+                ce plat consiste en une base de quinoa cuit, mélangée avec des légumes rôtis tels que des patates
+                douces, des poivrons et des champignons. Il est garni d'avocat tranché, de graines de sésame grillées et
+                d'une vinaigrette à base de tahini et de citron.
             </p>
         </div>
         <div class="Carte Desserts" id="mDesserts">
             <p id="p1"><U>Mousse au chocolat végétalienne</U> - 11€<br><br>
-                cette mousse est préparée avec du lait de coco, du chocolat noir fondu et du sucre. Elle est servie fraîche avec des fraises fraîches ou des noix concassées.                <br>
+                cette mousse est préparée avec du lait de coco, du chocolat noir fondu et du sucre. Elle est servie
+                fraîche avec des fraises fraîches ou des noix concassées. <br>
                 <br>
 
 
                 <U>Cheesecake aux framboises végétalien</U> - 11€<br><br>
-                ce cheesecake est préparé avec un mélange de noix de cajou, de lait de coco, de sirop d'érable et de framboises fraîches. Il est servi froid et garni de framboises fraîches.
+                ce cheesecake est préparé avec un mélange de noix de cajou, de lait de coco, de sirop d'érable et de
+                framboises fraîches. Il est servi froid et garni de framboises fraîches.
                 <br>
                 <br>
 
                 <U>Crème brûlée végétalienne - 11€</U><br><br>
-                cette crème brûlée est préparée avec du lait d'amande, du sucre et de la fécule de maïs pour l'épaissir. Elle est saupoudrée de sucre et caramélisée à l'aide d'un chalumeau de cuisine avant d'être servie.               
+                cette crème brûlée est préparée avec du lait d'amande, du sucre et de la fécule de maïs pour l'épaissir.
+                Elle est saupoudrée de sucre et caramélisée à l'aide d'un chalumeau de cuisine avant d'être servie.
             </p>
         </div>
 
@@ -125,7 +140,6 @@
 
     <footer>
         <div class="main-footer">
-
             <div class="footer-content">
                 <div class="functions-icon">
                     <a href="mailto: abc@example.com" target="_blank"> <img id="mail" src="assets/mail.png"></a>
@@ -140,11 +154,12 @@
                     <a href="https://www.twitter.com" target="_blank"><img id="twitter" src="assets/twitter.png"></a>
                 </div>
             </div>
-
         </div>
+        <p>Mentions légales - ©Lafièrecarotte tous droits réservés
+        </p>
     </footer>
-            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-            <script src="script.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="script.js"></script>
 
 </body>
 
