--- a/Reservation.html
+++ b/Reservation.html
@@ -18,19 +18,7 @@
     <a href="./index.html"> <img class="logo" src="assets/main-logo.png"></a>
 </header>
 <nav id="menu">
-    <ul>
-        <li><a href="./carte.html">Menu du restaurant</a></li>
-        <li><a href="./valeurs.html">Nos valeurs</a></li>
-        <li><a href="./nouscontacter.html">Nous contacter</a></li>
 
-
-        <li>
-            <button id="animatedButton" class="menu-reserver"><a href="./carte.html">
-                    <div id="messenger">La Carte</div>
-                </a>
-            </button>
-        </li>
-    </ul>
 </nav>
 
 <body>
@@ -148,5 +136,7 @@
 
 <script src="script.js"></script>
 <script src="scriptFormRes.js"> </script>
+<script src="nav.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 </html>
