--- a/index.html
+++ b/index.html
@@ -19,19 +19,7 @@
     <a href="./index.html"> <img class="logo" src="assets/main-logo.png"></a>
 </header>
 <nav id="menu">
-    <ul>
-        <li><a href="./carte.html">Menu du restaurant</a></li>
-        <li><a href="./valeurs.html">Nos valeurs</a></li>
-        <li><a href="./nouscontacter.html">Nous contacter</a></li>
 
-
-        <li>
-            <button id="animatedButton" class="menu-reserver"><a href="./Reservation.html">
-                    <div id="messenger"></div>
-                </a>
-            </button>
-        </li>
-    </ul>
 </nav>
 
 <body>
@@ -77,6 +65,7 @@
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
+    <script src="nav.js"></script>
 
 </body>
 
