--- a/nouscontacter.html
+++ b/nouscontacter.html
@@ -19,17 +19,7 @@
     <a href="./index.html"> <img class="logo" src="assets/main-logo.png"></a>
 </header>
 <nav id="menu">
-    <ul>
-        <li><a href="./carte.html">Menu du restaurant</a></li>
-        <li><a href="./valeurs.html">Nos valeurs</a></li>
-        <li><a href="./nouscontacter.html">Nous contacter</a></li>
-        <li>
-            <button id="animatedButton" class="menu-reserver"><a href="./Reservation.html">
-                    <div id="messenger"></div>
-                </a>
-            </button>
-        </li>
-    </ul>
+
 </nav>
 
 <body>
@@ -91,6 +81,7 @@
     <script src="script.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="scriptnouscontacter.js"></script>
+    <script src="nav.js"></script>
 </body>
 
 
