ajout caroussel sur Valeurs en desktop

--- a/valeurs.html
+++ b/valeurs.html
@@ -73,10 +73,10 @@
             </button>
 
             <ul class="slides-container" id="slides-container">
-                <li class="slide"><img src="assets/legumes.png"></li>
-                <li class="slide"><img src="assets/valeur02.jpg"></li>
-                <li class="slide"><img src="assets/valeur03.jpg"></li>
-                <li class="slide"><img src="assets/table vegan.jpg"></li>
+                <li class="slide"><img src="assets/caroussel01.jpg"></li>
+                <li class="slide"><img src="assets/caroussel02.jpg"></li>
+                <li class="slide"><img src="assets/caroussel03.jpg"></li>
+                <li class="slide"><img src="assets/caroussel04.jpg"></li>
             </ul>
 
         </section>
