custom hero button

--- a/carte.html
+++ b/carte.html
@@ -26,7 +26,7 @@
 <body>
     <div class="hero">
         <h2>Notre menus & nos plats</h2>
-        <a class="hero-reserver" href="./Reservation.html">Réservation</a>
+        <a class="hero-reserver" href="./Reservation.html"><span>Réservation</span></a>
         <img class="hero-img" src="./assets/img_menu.png.jpg">
     </div>
     <div class="carte">
