--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="hero">
         <h2>Bienvenue à la fière carotte</h2>
-        <a class="hero-reserver" href="./Reservation.html">Réservation</a>
+        <a class="hero-reserver" href="./Reservation.html"><span> Réservation</span></a>
         <img class="hero-img" src="assets/hero-accueil.jpg">
     </div>
     <div class="main-content">
