--- a/nouscontacter.html
+++ b/nouscontacter.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="hero">
-        <a class="hero-reserver" href="./Reservation.html">Réservation</a>
+        <a class="hero-reserver" href="./Reservation.html"><span>Réservation</span></a>
         <img class="hero-img" src="assets/salad-tomate-oignon.jpg">
     </div>
 
@@ -53,7 +53,7 @@
             <textarea name="message" placeholder="Message:" id="message_input" cols="30" rows="3" required></textarea>
         </div>
         <div class="submit">
-            <a href="#popup" class="contactButton" >Envoyer</a>
+            <a href="#popup" class="contactButton">Envoyer</a>
         </div>
         <div id="popup" class="overlay">
             <div class="popup">
