--- a/valeurs.html
+++ b/valeurs.html
@@ -25,7 +25,7 @@
 
     <div class="hero">
         <h2>Bienvenue à la fière carotte</h2>
-        <a class="hero-reserver" href="./Reservation.html">Réservation</a>
+        <a class="hero-reserver" href="./Reservation.html"><span>Réservation</span></a>
         <img class="hero-img" src="assets/valeursHero.jpg">
     </div>
 
