--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             produits frais, locaux. Venez découvrir notre menu équilibré et
             et respectueux de l'environnement dans une ambiance accueillante et éco-responsable.</p>
         <div class="main-img"><img src="assets/main-accueil.jpg"></div>
-        <a class="main-button" href="./carte.html"> notre menu</a>
+        <a class="main-button" href="./carte.html"><span>notre menu</span></a>
         <div class="separator"></div>
         <h3>Du lundi au vendredi</h3>
         <p class="ouverture">Midi : 12h00 - 14h30</p>
