--- a/carte.html
+++ b/carte.html
@@ -32,16 +32,16 @@
     <div class="carte">
         <div class="navMenu1">
 
-            <button class="main-button" id="bpJour">Menu du jour</button>
+            <button class="main-button" id="bpJour"> <span> Menu du jour</span></button>
 
-            <button class="main-button" id="bpEntrees">Entrée</button>
+            <button class="main-button" id="bpEntrees"> <span> Entrée</span></button>
 
-            <button class="main-button" id="bpPlats">Plats</button>
+            <button class="main-button" id="bpPlats"><span>Plats</button> </span>
 
-            <button class="main-button" id="bpDesserts">Desserts</button>
+            <button class="main-button" id="bpDesserts"><span>Desserts</span></button>
 
         </div>
-        <div class description>
+        <div class="description">
             <div class="Carte Jour" id="mJour">
 
                 <H4>Menu du jour à 18€</H4>
