MAJ footer; Loop caroussel; typo diverses

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
     <div class="hero">
-        <h2>Bienvenue à la fière carotte</h2>
+        <h2>Bienvenue à la Fière Carotte</h2>
         <a class="hero-reserver" href="./Reservation.html"><span> Réservation</span></a>
         <img class="hero-img" src="assets/hero-accueil.jpg">
     </div>
@@ -52,6 +52,7 @@
                     <a href="https://goo.gl/maps/PzpQMd1XEAXccWzd6" target="_blank"> <img id="map"
                             src="assets/map.png"></a>
                 </div>
+                <p>Mentions légales - ©Lafièrecarotte tous droits réservés
 
                 <div class="social-icon">
                     <a href="https://www.instagram.com" target="_blank"><img id="insta" src="assets/insta.png"></a>
@@ -60,7 +61,6 @@
                 </div>
             </div>
         </div>
-        <p>Mentions légales - ©Lafièrecarotte tous droits réservés
         </p>
     </footer>
     <script src="nav.js"></script>
