--- a/carte.html
+++ b/carte.html
@@ -15,7 +15,7 @@
     <title>Carte</title>
 </head>
 <header class="header">
-    <h1 class="header-title">La fière carotte</h1>
+    <h1 class="header-title">La Fière Carotte</h1>
     <div id="menu-button" class="close"></div>
     <a href="./index.html"> <img class="logo" src="assets/main-logo.png"></a>
 </header>
@@ -137,6 +137,7 @@
                     <a href="https://goo.gl/maps/PzpQMd1XEAXccWzd6" target="_blank"> <img id="map"
                             src="assets/map.png"></a>
                 </div>
+                <p>Mentions légales - ©Lafièrecarotte tous droits réservés
 
                 <div class="social-icon">
                     <a href="https://www.instagram.com" target="_blank"><img id="insta" src="assets/insta.png"></a>
@@ -145,7 +146,6 @@
                 </div>
             </div>
         </div>
-        <p>Mentions légales - ©Lafièrecarotte tous droits réservés
         </p>
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
