--- a/nouscontacter.html
+++ b/nouscontacter.html
@@ -14,7 +14,7 @@
     <title>Nous contacter</title>
 </head>
 <header class="header">
-    <h1 class="header-title">La fière carotte</h1>
+    <h1 class="header-title">La Fière Carotte</h1>
     <div id="menu-button" class="close"></div>
     <a href="./index.html"> <img class="logo" src="assets/main-logo.png"></a>
 </header>
@@ -38,26 +38,26 @@
     <form id="contact_form">
         <div class="name">
             <label for="name"></label>
-            <input type="text" placeholder="Nom:" name="name" id="name_input" required>
+            <input type="text" placeholder="Nom :" name="name" id="name_input" required>
         </div>
         <div class="telephone">
             <label for="name"></label>
-            <input type="text" placeholder="Télephone:" name="telephone" id="telephone_input" required>
+            <input type="text" placeholder="Téléphone :" name="telephone" id="telephone_input" required>
         </div>
         <div class="email">
             <label for="email"></label>
-            <input type="email" placeholder="email:" name="email" id="email_input" required>
+            <input type="email" placeholder="email :" name="email" id="email_input" required>
         </div>
         <div class="message">
             <label for="message"></label>
-            <textarea name="message" placeholder="Message:" id="message_input" cols="30" rows="3" required></textarea>
+            <textarea name="message" placeholder="Message :" id="message_input" cols="30" rows="3" required></textarea>
         </div>
         <div class="submit">
             <a href="#popup" class="contactButton">Envoyer</a>
         </div>
         <div id="popup" class="overlay">
             <div class="popup">
-                <h6> Votre message a bien été envoyé!</h6>
+                <h6> Votre message a bien été envoyé !</h6>
                 <a href="#" class="cross">&times;</a>
                 <div class="jpp"></div>
             </div>
@@ -75,6 +75,7 @@
                     <a href="https://goo.gl/maps/PzpQMd1XEAXccWzd6" target="_blank"> <img id="map"
                             src="assets/map.png"></a>
                 </div>
+                <p>Mentions légales - ©Lafièrecarotte tous droits réservés</p>
 
                 <div class="social-icon">
                     <a href="https://www.instagram.com" target="_blank"><img id="insta" src="assets/insta.png"></a>
@@ -83,7 +84,6 @@
                 </div>
             </div>
         </div>
-        <p>Mentions légales - ©Lafièrecarotte tous droits réservés</p>
     </footer>
     <script src="script.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
