--- a/valeurs.html
+++ b/valeurs.html
@@ -24,7 +24,7 @@
 <body>
 
     <div class="hero">
-        <h2>Bienvenue à la fière carotte</h2>
+        <h2>Bienvenue à la Fière Carotte</h2>
         <a class="hero-reserver" href="./Reservation.html"><span>Réservation</span></a>
         <img class="hero-img" src="assets/valeursHero.jpg">
     </div>
@@ -107,14 +107,14 @@
                     <a href="https://goo.gl/maps/PzpQMd1XEAXccWzd6" target="_blank"> <img id="map"
                             src="assets/map.png"></a>
                 </div>
-
+                <p>Mentions légales - ©Lafièrecarotte tous droits réservés</p>
                 <div class="social-icon">
                     <a href="https://www.instagram.com" target="_blank"><img id="insta" src="assets/insta.png"></a>
                     <a href="https://www.facebook.com" target="_blank"><img id="facebook" src="assets/facebook.png"></a>
                     <a href="https://www.twitter.com" target="_blank"><img id="twitter" src="assets/twitter.png"></a>
                 </div>
             </div>
-            <p>Mentions légales - ©Lafièrecarotte tous droits réservés</p>
+
         </div>
 
     </footer>
